# preparacion-entorno

./: CHANGELOG.md  README.md  cookiecutter.json  copier.yml  environment.yaml  environment.yml  install.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: index.rst
docs/source/: conf.py  index.rst  test.rst  {{ cookiecutter.project_slug }}.rst
hooks/: post_gen_project.py  pre_gen_project.py
template/: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
template/ayuda/: README.md
template/docs/source/: index.rst
template/notebooks/: 0-0-{{ project_author_name }}-DescargaDatos.ipynb  0-1-{{ project_author_name }}-ProcesamientoDatos.ipynb  0-2-{{ project_author_name }}-Ejecucion.ipynb
template/tests/: conftest.py  test_make_dataset.py  test_paths.py  test_predict_model.py  test_proba.py  test_train_model.py
template/{{ project_slug }}/: .env.example  LICENSE  Makefile  README.md  main.py  pyproject.toml
template/{{ project_slug }}/ayuda/: README.md
template/{{ project_slug }}/data/: make_dataset.py
template/{{ project_slug }}/docs/source/: conf.py
template/{{ project_slug }}/features/: build_features.py
template/{{ project_slug }}/models/: predict_model.py  train_model.py
template/{{ project_slug }}/notebooks/: 0-0-{{ project_author_name }}-DescargaDatos.ipynb  0-1-{{ project_author_name }}-ProcesamientoDatos.ipynb  0-2-{{ project_author_name }}-Ejecucion.ipynb
template/{{ project_slug }}/tests/: conftest.py  test_build_features.py  test_predict_model.py  test_train_model.py  test_visualize.py
template/{{ project_slug }}/utils/: paths.py
template/{{ project_slug }}/visualization/: visualize.py
template/{{ project_slug }}/{{ project_slug }}/features/: build_features.py
template/{{ project_slug }}/{{ project_slug }}/models/: predict_model.py  train_model.py
{{ cookiecutter.project_module_name }}/: .gitignore  Makefile  main.py
{{ cookiecutter.project_module_name }}/ayuda/: README.md
{{ cookiecutter.project_module_name }}/{{ cookiecutter.project_module_name }}/data/: make_dataset.py
{{ cookiecutter.project_module_name }}/{{ cookiecutter.project_module_name }}/features/: build_features.py
{{ cookiecutter.project_module_name }}/{{ cookiecutter.project_module_name }}/models/: predict_model.py  train_model.py
{{ cookiecutter.project_module_name }}/{{ cookiecutter.project_module_name }}/utils/: paths.py
{{ cookiecutter.project_slug }}/: .env.example  .gitignore  Makefile  README.md  ayuda  install.md  main.py  pyproject.toml  ruff.toml
{{ cookiecutter.project_slug }}/ayuda/: README.md
{{ cookiecutter.project_slug }}/docs/source/: conf.py  index.rst
{{ cookiecutter.project_slug }}/notebooks/: 0-0-{{ cookiecutter.project_author_name }}-DescargaDatos.ipynb  0-0-{{ cookiecutter.project_author_name }}-Descargadatos.ipynb  0-1-{{ cookiecutter.project_author_name }}-ProcesamientoDatos.ipynb  0-2-{{ cookiecutter.project_author_name }}-Ejecucion.ipynb
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_build_features.py  test_make_dataset.py  test_paths.py  test_predict_model.py  test_proba.py  test_train_model.py  test_visualize.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module_name }}/data/: make_dataset.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module_name }}/features/: build_features.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module_name }}/models/: predict_model.py  train_model.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module_name }}/utils/: paths.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module_name }}/visualization/: visualize.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/data/: make_dataset.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/models/: predict_model.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/visualization/: visualize.py
{{cookiecutter.project_slug}}/: README.md  environment.yml
