[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = [
  { name = "{{ cookiecutter.project_author_name }}" }
]
readme = "README.md"
requires-python = ">= {{ cookiecutter.python_version }}"
license = { text = "{{ cookiecutter.project_open_source_license if cookiecutter.project_open_source_license != 'No license file' else '' }}" }
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "jupyter",
    "jupyterlab",
    "python-dotenv",
    "missingno",
]

[project.optional-dependencies]
dev = [
    "black",
    "invoke",
    "nbdime",
    "ruff",
    "pytest",
    "sphinx",
]

# ML supervisado: clasificación + PCA opcional como preprocesado
supervisado = [
    "scikit-learn",   # modelos, PCA, pipelines, métricas
    "scipy",          # stats, tests de normalidad, dendrogramas
    "lightgbm",
    "xgboost",
    "statsmodels",
    "imbalanced-learn",
    "joblib",
]

# ML no supervisado: clustering + reducción de dimensionalidad
no_supervisado = [
    "scikit-learn",   # KMeans, AgglomerativeClustering, PCA, DBSCAN
    "scipy",          # dendrogramas y clustering jerárquico
    "yellowbrick",    # SilhouetteVisualizer
    "umap-learn",     # reducción de dimensionalidad no lineal (UMAP)
    "hdbscan",        # clustering basado en densidad jerárquico
    "joblib",
]

# Redes neuronales: deep learning con PyTorch + Polars
redes_neuronales = [
    "torch",
    "torchvision",
    "torchaudio",
    "torchmetrics[visual]",
    "tensorboard",
    "polars",         # carga eficiente de datos con dtypes explícitos
    "scikit-learn",   # PCA, métricas, preprocesado
    "scipy",
    "joblib",
]

# Modelos híbridos: combinan técnicas supervisadas y no supervisadas
# Casos de uso:
#   - PCA/UMAP → reducir dimensiones → clasificador
#   - KMeans → distancias a centroides como features → RF/LogReg
#   - IsolationForest → score de anomalía como feature → clasificador
#   - Semi-supervisado: LabelPropagation / LabelSpreading
hibrido = [
    "scikit-learn",   # PCA, KMeans, IsolationForest, pipelines, semi-supervisado
    "scipy",          # estadísticos, tests de normalidad
    "umap-learn",     # UMAP como alternativa a PCA (no lineal)
    "lightgbm",       # clasificador final potente
    "xgboost",        # clasificador final alternativo
    "imbalanced-learn",
    "joblib",
]

[tool.setuptools]
packages = ["{{ cookiecutter.project_module_name }}"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"