[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = [
  { name = "{{ cookiecutter.project_author_name }}" }
]
readme = "README.md"
requires-python = ">= {{ cookiecutter.python_version }}"
license = {text = "{{ cookiecutter.project_open_source_license if cookiecutter.project_open_source_license != 'No license file' else ''}}"}
dependencies = []

[tool.setuptools]
packages = ["{{ cookiecutter.project_slug }}"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Excluir el directorio del template — contiene variables {{ cookiecutter.* }}
# que ruff no puede parsear como Python/TOML válido
exclude = [
    "{{ cookiecutter.project_slug }}",
]