[project]
name = "{{ project_slug }}"
version = "{{ project_version }}"
description = "{{ project_description }}"
authors = [
  { name = "{{ project_author_name }}" }
]
readme = "README.md"
requires-python = ">= {{ python_version }}"
license = {text = "{{ project_open_source_license if project_open_source_license != 'No license file' else ''}}"}
dependencies = []

[tool.setuptools]
packages = ["{{ project_slug }}"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Excluir el directorio del template — contiene variables {{ * }}
# que ruff no puede parsear como Python/TOML válido
exclude = [
    "{{ project_slug }}",
]