[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = [
  { name = "{{ cookiecutter.project_author_name }}" }
]
readme = "README.md"
requires-python = ">= {{ cookiecutter.python_version }}"
license = { text = "{{ cookiecutter.project_open_source_license if cookiecutter.project_open_source_license != 'No license file' else '' }}" }
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "plotly",
    "jupyter",
    "jupyterlab",
    "python-dotenv",
    "missingno",
]

[project.optional-dependencies]
dev = [
    "black",
    "invoke",
    "nbdime",
    "ruff",
    "pytest",
    "sphinx",
]

# ML supervisado: clasificación y regresión con scikit-learn y boosting
supervisado = [
    "scikit-learn",
    "lightgbm",
    "xgboost",
    "statsmodels",
    "imbalanced-learn",
    "joblib",
]

# ML no supervisado: clustering, reducción de dimensionalidad
no_supervisado = [
    "scikit-learn",
    "umap-learn",
    "hdbscan",
    "joblib",
]

# Redes neuronales: deep learning con PyTorch
redes_neuronales = [
    "torch",
    "torchvision",
    "torchaudio",
    "torchmetrics[visual]",
    "tensorboard",
    "scikit-learn",
    "joblib",
]

[tool.setuptools]
packages = ["{{ cookiecutter.project_module_name }}"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
